# octavian_test_task

./: CMakeLists.txt  readme.txt
source/: StateMachine.cpp  StateMachine.hpp  game.cpp  game.hpp  main.cpp
